--- a/V1/index.html
+++ b/V1/index.html
@@ -1,10 +1,98 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!-- M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page
+I have used the head, body and footer tags. Within the body tag, I have used the header, section, article, and aside tags. These basic HTML tags make up the basic structure of this web page. -->
+<html lang="en">
+    
+    <!-- HEAD -->
+
     <head>
+        <!--
+        M02 Project V1 - Basic HTML and CSS
+
+        Home Page
+        Author: Zoe Dimof
+        Date: 5/2/2020
+
+        Filename: index.html
+        -->
+
         <meta charset="UTF-8">
-        <title>GitHub Fun</title>
+        <title>Travel Paradise</title>
+
+        <!-- M1LO8 Demonstrate the use of external style sheets
+        I have linked below a stylesheet. -->
+        <link href="styles.css" rel="stylesheet"/>
+
+        <!-- M2LO4 Demonstrate external, embedded, and inline styles
+        I have created an embedded style to add padding and color to the footer. -->
+        <style>
+            footer {
+                padding-left: 30px;
+                color: hsl(37, 22%, 62%);
+            }
+        </style>
     </head>
+
+    <!-- BODY -->
+
     <body>
-        <!-- Stuff goes here -->
+        <header>
+            <!-- M1LO12 Create navigation using unordered lists
+            Below is my unordered navigation list. It links to the about page, and future pages. -->
+
+            <!-- NAVIGATION -->
+
+            <nav>
+                <ul>
+                    <!-- M1LO13 Demonstrate using 3 types of hyperlinks: site navigation, targeted location using ids, and external
+                    These are site navigation hyperlinks. They link to my other pages. -->
+                    <li class="nav"><a href="index.html">Home</a></li>
+                    <li class="nav"><a href="attractions.html">Attractions</a></li>
+                    <li class="nav"><a href="events.html">Events</a></li>
+                    <li class="nav"><a href="residents.html">Residents</a></li>
+                    <li class="nav"><a href="history.html">History</a></li>
+                    <li class="nav"><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- MAIN -->
+
+        <section>
+            <aside>
+                <!-- M1LO9 Demonstrate the use of inline images
+                I have inserted an image below. I drew it myself.-->
+                <img id="homeimg" src="intro.png" alt="">
+            </aside>
+            <article class="introtext">
+                <h1>Welcome to Paradise!</h1>
+                <p>Paradise is a coastal island rich with nature. It may be small, but Paradise has many features including flowing rivers, sandy beaches, shopping and housing districts, and an international airport. Many kind faces have been moving to Paradise in hopes of creating a bright future for themselves.</p>
+                <p>On this website, you can find all sorts of information of what you can expect from visiting this island. There are many attractions and events that will keep you busy during your stay. The history page will brief you on Paradise's history. You can even find a list of notable members of the community by visiting the residents page.</p>
+                <p>We hope you enjoy your stay!</p>
+            </article>
+        </section>
+
+        <!-- LINKS -->
+
+        <section>
+            <!-- M1LO13 Demonstrate using 3 types of hyperlinks: site navigation, targeted location using ids, and external
+            These are targeted location hyperlinks using ids. They link to different sections of my attractions page.-->
+            <a href="attractions.html#museumimg"><img src="bar1.png" alt="Museum"></a>
+            <a href="attractions.html#shopimg"><img src="bar2.png" alt="Shopping"></a>
+            <a href="attractions.html"><img src="bar3.png" alt="Bamboo"></a>
+            <a id="last" href="attractions.html"><img src="bar4.png" alt="Housing"></a>
+            <!-- M1LO13 Demonstrate using 3 types of hyperlinks: site navigation, targeted location using ids, and external
+            Within my citations for screenshots, I linked to Nintendo's website. It is an external link. -->
+            <p id="cite">"Various screenshots from the video game Animal Crossing New Horizons, including a museum, shop, bamboo, and a house." , <a href="https://www.nintendo.com/">Nintendo</a>, 2020. Author's screenshot.</p>
+        </section>
+    
+
+        <!-- FOOTER -->
+
+        <footer>
+            <!-- M2LO4 Demonstrate external, embedded, and inline styles 
+            I have created an inline style to adjust the font size of the text within the footer. -->
+            <p style="font-size: 0.8em;">This is an unofficial fansite. Animal Crossing and its characters belong to Nintendo.</p>
+        </footer>
     </body>
 </html>
